# NYC-TAXI-TRIP-DURATION-MLOPS

./: .gitignore  Dockerfile.airflow  Dockerfile.spark  Dockerfile.superset  FIX_JAVA.md  MEMORY_OPTIMIZATION_GUIDE.md  OOM_FIX_SUMMARY.md  PRODUCTION_SETUP.md  QUICKSTART.md  README-SETUP.md  README.md  docker-compose.yml  main.py  pyproject.toml
airflow/dags/: .gitkeep  export_gold_to_postgres.py  nyc_taxi_etl_2024.py  nyc_taxi_etl_production_dag.py
docs/: ARCHITECTURE_SUMMARY.md  README.md  SUPERSET_SETUP.md
feature_store/: feature_store.yaml  features.py
scripts/: export_no_spark.py  export_to_superset.sh  init-minio-bucket.sh  init-services.sh  init_spark_tables.sh  minio-init.sh  query_examples.py  run_pipeline_2024.sh  run_transformation_monthly.sh  run_trino.sh  setup-k3d.sh  setup_airflow_connections.sh  setup_trino_catalog.sh  start-all.sh  stop-all.sh
scripts/trino/: entrypoint.sh
spark_jobs/: create_tables.sql  data_preprocessing_job.py  data_validation_job.py  export_to_postgres.py  feature_engineering_job.py  iceberg_conversion_job.py  init_tables.py  test_gold_read.py
src/: exceptions.py  pipeline.py
src/config/: __init__.py  feature_engineering.yaml  iceberg.yaml  ingestion.yaml  loader.py  model.yaml  preprocessing.yaml  schema.yaml  validation.yaml
src/data_ingestion/: __init__.py  data_ingestion.py
src/data_transformation/: __init__.py  base_stage.py  data_transformation.py  feature_engineering.py  partitioned_processing.py  preprocessing.py
src/data_validation/: __init__.py  data_validation.py
superset/: init_superset.sh
(+16 files in other folders)
